--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#0B3427",
-        "titleBar.activeBackground": "#104837",
+        "activityBar.background": "#45ba95",
+        "titleBar.activeBackground": "#13a97c",
         "titleBar.activeForeground": "#F2FCF9"
     }
 }
